--- a/web/index.html
+++ b/web/index.html
@@ -280,15 +280,7 @@
                     </div>
                     <div class="kontaktai-blokas-antras">
                         <ul class="kontaktai-meniu">
-                            <li><a href=""><span>Apie stovyklavietę</span></a>
-                            </li>
-                            <li><a href=""><span>Paslaugos</span></a>
-                            </li>
-                            <li><a href=""><span>Kainoraštis</span></a>
-                            </li>
-                            <li><a href=""><span>Galerija</span></a>
-                            </li>
-                            <li><a href=""><span>Kontaktai</span></a>
+                            <li><a href=""><span>Įdėti susisiekimo formą.</span></a>
                             </li>
                         </ul>
                     </div>
