--- a/web/index.html
+++ b/web/index.html
@@ -218,7 +218,23 @@
     </div>
     <div class="puslapis-centravimas puslapis-galerija">
         <div id="galerija" class="nuoroda"></div>
-
+        <div class="turinio-containeris">
+            <h1>Galerija</h1>
+            <div class="galerija-turinys">
+                <div class="galerija-nuotrauka">
+                    <img src="media/IMG-20200127-WA0012.jpg" alt="">
+                </div>
+                <div class="galerija-nuotrauka">
+                    <img src="media/20190831_085750.jpg" alt="">
+                </div>
+                <div class="galerija-nuotrauka">
+                    <img src="media/20190831_085808.jpg" alt="">
+                </div>
+                <div class="galerija-nuotrauka">
+                    <img src="media/20190831_085945.jpg" alt="">
+                </div>
+            </div>
+        </div>
     </div>
     <footer>
         <div class="kontaktai">
