--- a/web/index.html
+++ b/web/index.html
@@ -83,6 +83,28 @@
         </nav>
     </header>
     <div id="pradzia" class="puslapis-centravimas puslapis-titulinis">
+        <div class="titulinis-fonai">
+            <div class="titulinis-fonas">
+                <div class="fonas-containeris">
+                    <img src="media/titulinis.jpg" alt="">
+                </div>
+            </div>
+            <div class="titulinis-fonas">
+                <div class="fonas-containeris">
+                    <img src="media/titulinis1.jpg" alt="">
+                </div>
+            </div>
+            <div class="titulinis-fonas">
+                <div class="fonas-containeris">
+                    <img src="media/titulinis2.jpg" alt="">
+                </div>
+            </div>
+            <div class="titulinis-fonas">
+                <div class="fonas-containeris">
+                    <img src="media/titulinis3.jpg" alt="">
+                </div>
+            </div>
+        </div>
         <div class="turinio-containeris"> 
             <div class="titulinis-tekstas">
                 <h1>Atokvėpis prie Verknės</h1>
@@ -90,11 +112,18 @@
             </div>         
         </div>
     </div>
-    <div  class="puslapis-centravimas puslapis-apie">
+<div class="pagrindinis-containeris">
+    <div class="puslapis-centravimas puslapis-apie">
         <div id="apie" class="nuoroda"></div>
         <div class="turinio-containeris">
             <div class="puslapis-turinys">
-                <p>Patogiai, jaukiai įrengta stovyklavietė 100-metų turinčiame vienkiemyje ant Verknės upės kranto. Puiki, rami, saugi vieta, tinkanti poilsiauti šeimoms, draugų susitikimui, darbo kolektyvams.
+                <div class="puslapis-sukis">
+                    <h3>„Plauk ir stovyklauk“!</h3>
+                    <h3>„Tai juk nuostabu“ sušuko vyras panardinęs irklą į vandenį.</h3>    
+                    <h3>Mėgstu baidares!</h3>    
+                    <h3>Žinojau, kad tau patiks.</h3>  
+                </div>
+                <p>Patogiai, jaukiai įrengta stovyklavietė vienkiemyje ant Verknės upės kranto. Puiki, rami, saugi vieta, tinkanti poilsiauti šeimoms, draugų susitikimui, darbo kolektyvams.
                 </p>
                 <p>Poilsiautojai gali išsimaudyti Verknės upėje, kubile, žaisti tinklinį, kvadratą, liaudiškus žaidimus, tinkančius tiek suaugusiems, tiek vaikams, vakaroti prie laužo.
                 </p>
@@ -139,10 +168,14 @@
                         <div class="paslauga-numeris">7</div>
                         <span>Lauko dušas.</span>
                     </div>
+                    <div class="paslaugos-paslauga">
+                        <div class="paslauga-numeris">8</div>
+                        <span>Virdulys, šaldytuvas.</span>
+                    </div>
                 </div>
                 <div class="paslaugos">
                     <h3>Plaukimo baidarėmis atstumai:</h3>
-                    <p>Vyšninių tiltas – vienkiemis 15km.</p>
+                    <p>Vyšniūnių tiltas – vienkiemis 15km.</p>
                     <p>Stakliškių tiltas – vienkiemis 12km.</p>
                     <p>Pakrovų tiltas – vienkiemis 7km.</p>
                     <p>Vienkiemis – Jundeliškių elektrinė 7km.</p>
@@ -211,7 +244,7 @@
                         <span>Maisto atvežimo ir užsakymo paslauga.</span>
                         <div>?</div>
                     </div>
-                    <p>12 asmenų ir didesnėms grupėms malkos ir maisto gamyba nemokamai.</p>
+                    <p>12 asmenų ir didesnėms grupėms malkos maisto gamybai – nemokamai.</p>
                 </div>
             </div>
         </div>
@@ -236,6 +269,7 @@
             </div>
         </div>
     </div>
+</div>
     <footer>
         <div class="kontaktai">
             <div id="kontaktai" class="nuoroda"></div>
