--- a/web/index.html
+++ b/web/index.html
@@ -175,7 +175,7 @@
                 </div>
                 <div class="paslaugos">
                     <h3>Plaukimo baidarėmis atstumai:</h3>
-                    <p>Vyšniūnių tiltas – vienkiemis 15km.</p>
+                    <p>Vyšniūnų tiltas – vienkiemis 15km.</p>
                     <p>Stakliškių tiltas – vienkiemis 12km.</p>
                     <p>Pakrovų tiltas – vienkiemis 7km.</p>
                     <p>Vienkiemis – Jundeliškių elektrinė 7km.</p>
