--- a/web/index.html
+++ b/web/index.html
@@ -44,7 +44,7 @@
                         <a href="tel:868259377">8-682 59377</a>
                     </li>
                     <li class="navigacija-svg navigacija-pastas">
-                        <a href="mailto:pastas@gmail.com">pastas@gmail.com</a>
+                        <a href="mailto:atokvepisprieverknes@gmail.com">atokvepisprieverknes@gmail.com</a>
                     </li>
                 </ul>
             </div>
@@ -74,7 +74,7 @@
                         <a href="tel:868259377">Skambinkite: 8-682 59377</a>
                     </li>
                     <li class="navigacija-svg navigacija-pastas">
-                        <a href="mailto:pastas@gmail.com">Susisiekite: pastas@gmail.com</a>
+                        <a href="mailto:atokvepisprieverknes@gmail.com">Susisiekite: atokvepisprieverknes@gmail.com</a>
                     </li>
                 </ul>
 
@@ -139,7 +139,7 @@
             <div class="puslapis-turinys">
                 <div class="paslaugos-iliustracija"><img src="media/iliustracija.svg" alt=""></div>
                 <div class="paslaugos-iliustracijos-tekstas">
-                    <h1>Paslaugos</h1>
+                    <h1>Paslaugos/ inventorius</h1>
                     <div class="paslaugos-paslauga">
                         <div class="paslauga-numeris">1</div>
                         <span>Baidarės.</span>
@@ -174,12 +174,17 @@
                     </div>
                 </div>
                 <div class="paslaugos">
-                    <h3>Plaukimo baidarėmis atstumai:</h3>
-                    <p>Vyšniūnų tiltas – vienkiemis 15km.</p>
-                    <p>Stakliškių tiltas – vienkiemis 12km.</p>
-                    <p>Pakrovų tiltas – vienkiemis 7km.</p>
-                    <p>Vienkiemis – Jundeliškių elektrinė 7km.</p>
-                    <p>Pagal susitarimą galimi ilgesni plaukimai.</p>
+                    <div class="paslaugos-atstumai">
+                        <h3>Plaukimo baidarėmis atstumai:</h3>
+                        <p>Vyšniūnų tiltas – vienkiemis <span>15km.</span></p>
+                        <p>Stakliškių tiltas – vienkiemis <span>12km.</span></p>
+                        <p>Pakrovų tiltas – vienkiemis <span>7km.</span></p>
+                        <p>Vienkiemis – Jundeliškių elektrinė <span>7km.</span></p>
+                        <p>Pagal susitarimą galimi ilgesni plaukimai.</p>
+                    </div>
+                    <div class="paslaugos-verkne">
+                        <img src="media/verkne.jpg" alt="">
+                    </div>
                 </div>
             </div>
         </div>      
@@ -242,7 +247,7 @@
                     </div>
                     <div class="kainos">
                         <span>Maisto atvežimo ir užsakymo paslauga.</span>
-                        <div>?</div>
+                        <div>pagal susitarimą</div>
                     </div>
                     <p>12 asmenų ir didesnėms grupėms malkos maisto gamybai – nemokamai.</p>
                 </div>
@@ -266,6 +271,12 @@
                 <div class="galerija-nuotrauka">
                     <img src="media/20190831_085945.jpg" alt="">
                 </div>
+                <div class="galerija-nuotrauka">
+                    <img src="media/IMG-20200127-WA0011.jpg" alt="">
+                </div>
+                <div class="galerija-nuotrauka">
+                    <img src="media/IMG-20200127-WA0006.jpg" alt="">
+                </div>
             </div>
         </div>
     </div>
@@ -274,18 +285,18 @@
         <div class="kontaktai">
             <div id="kontaktai" class="nuoroda"></div>
             <div class="kontaktai-mygtuku-containeris">
-                <a href="">
+                <a href="tel:868259377">
                     <div class="kontaktai-mygtukas">
                         <h3>Registruokitės</h3>
                         <p>Užsiregistruoti galite paskambine telefonu:</p>
                         <p>8-682 59377</p>
                     </div>
                 </a>
-                <a href="">
+                <a href="mailto:atokvepisprieverknes@gmail.com">
                     <div class="kontaktai-mygtukas">
                         <h3>Susisiekite</h3>
                         <p>Sužinokite daugiau informacijos apie stovyklavietę susisiekę el. paštu:</p>
-                        <p>pastas@gmail.com</p>
+                        <p>atokvepisprieverknes@gmail.com</p>
                     </div>
                 </a>
             </div>
@@ -296,15 +307,15 @@
                             <li>
                                 <h3>Atokvėpis prie Verknės</h3>
                             </li>
-                            <li><a href="">
+                            <li><a href="tel:868259377">
                                 <img src="media/tel_baltas.svg" alt="">
                                 <span>8-682 59377</span>
                             </a></li>
-                            <li><a href="">
+                            <li><a href="mailto:atokvepisprieverknes@gmail.com">
                                 <img src="media/pastas_baltas.svg" alt="">
-                                <span>pastas@gmail.com</span>
+                                <span>atokvepisprieverknes@gmail.com</span>
                             </a></li>
-                            <li><a href="">
+                            <li><a href="https://www.google.lt/maps/@54.5706437,24.2002759,335m/data=!3m1!1e3?" target="_blank">
                                 <img src="media/adresas_baltas.svg" alt="">
                                 <span>Verknės g. 12, Padriežiškių kaimas, Jiezno seniūnija, Prienų raj.</span>
                             </a></li>
